{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 28,
  "lineage": "76dcce7b-456e-7d17-0669-0c94c304e045",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_gratuite",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:463580336373:instance/i-0689eb19a651dbe8e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0689eb19a651dbe8e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "Cle_test_terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06041423d27ecb3ea",
            "private_dns": "ip-172-31-48-180.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.48.180",
            "public_dns": "ec2-54-210-27-102.compute-1.amazonaws.com",
            "public_ip": "54.210.27.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d773c2c903dafd79",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_all",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044ba236089e2f478",
            "tags": {
              "Name": "ubuntu-gratuit-0"
            },
            "tags_all": {
              "Name": "ubuntu-gratuit-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-046c125967e6c2b8a",
              "sg-0b1d3f1dcedb6bf2b"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:463580336373:instance/i-060bc9930ddff61a6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-060bc9930ddff61a6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "Cle_test_terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f47880f620507e70",
            "private_dns": "ip-172-31-58-151.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.58.151",
            "public_dns": "ec2-34-229-136-187.compute-1.amazonaws.com",
            "public_ip": "34.229.136.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06803274758bd2734",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_all",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044ba236089e2f478",
            "tags": {
              "Name": "ubuntu-gratuit-1"
            },
            "tags_all": {
              "Name": "ubuntu-gratuit-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-046c125967e6c2b8a",
              "sg-0b1d3f1dcedb6bf2b"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463580336373:security-group/sg-046c125967e6c2b8a",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046c125967e6c2b8a",
            "ingress": [],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "463580336373",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a2bab204ac13464"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463580336373:security-group/sg-0b1d3f1dcedb6bf2b",
            "description": "Allow incoming SSH traffic",
            "egress": [],
            "id": "sg-0b1d3f1dcedb6bf2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "463580336373",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a2bab204ac13464"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}